--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "npx ts-node -T src/index.ts",
     "dev": "nodemon src/index.ts && vue-cli-service serve",
     "dev-ui": "vue-cli-service serve",
-    "build": "rm -rf ./dist/server && tsc --project ./tsconfig.json --outDir ./dist/server && vue-cli-service build",
-    "build-server": "rm -rf ./dist/server && tsc --project ./tsconfig.json --outDir ./dist/server",
+    "build": "rimraf ./dist/server && tsc --project ./tsconfig.json --outDir ./dist/server && vue-cli-service build",
+    "build-server": "rimraf ./dist/server && tsc --project ./tsconfig.json --outDir ./dist/server",
     "build-ui": "vue-cli-service build",
     "run": "node dist/server/index.js"
   },
@@ -36,8 +36,8 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@types/koa": "^2.15.0",
-    "@types/koa-router": "^7.4.8",
     "@types/koa__cors": "^5.0.0",
+    "@types/koa-router": "^7.4.8",
     "@types/pg": "^8.11.4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -50,6 +50,7 @@
     "less-loader": "^11.1.4",
     "nodemon": "^3.1.0",
     "path-browserify": "^1.0.1",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "vue": "^2.7.16",
